--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
-    "react-spinkit": "^3.0.0"
+    "react-spinkit": "^3.0.0",
+    "shortid": "^2.2.14"
   },
   "scripts": {
     "start": "react-scripts start",
