--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0"
+    "prettier": "^1.17.0",
+    "redux-devtools": "^3.5.0"
   },
   "homepage": "https://mariukhin.github.io/goit-react-hw-05-budget-planner/"
 }
