--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
-    "halogen": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
-    "react-spinkit": "^3.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "reselect": "^4.0.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "tv4": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
